# ShinkaEvolve

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  EXECPLAN_PR_READY.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_IMPLEMENTED.md  VERIFICATION.md  docker-compose.yml  mkdocs.yml  pyproject.toml  skills-lock.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docs-release.yml  headless-agents-image.yml  integration.yml  pypi-release.yml
configs/: config.yaml
configs/cluster/: e2b.yaml  local.yaml
configs/database/: island_adaptive.yaml  island_large_adaptive.yaml  island_medium_adaptive.yaml  island_small_adaptive.yaml
configs/evolution/: agentic.yaml  large_budget.yaml  small_budget.yaml
configs/task/: autoformalization.yaml  boids_flocking.yaml  circle_packing.yaml  ocr_cleaning.yaml
configs/variant/: boids_flocking.yaml  boids_flocking_agentic.yaml  circle_packing_agentic.yaml  novelty_generator_gemini_example.yaml
containers/headless-agents/: Dockerfile  README.md
docs/: agentic_usage.md  async_evolution.md  configuration.md  cvdp_integration_plan.md  deepreview.md  examples.md  getting_started.md  migration_adaptation.md  release_notes.md  support_local_models.md  updates_since_last_commit.md  verilog_benchmarks_survey.md  verilog_eval_benchmark.md
examples/: shinka_tutorial.ipynb
examples/aec_packing/: run_evo.py
examples/alpha_evolve_math_problems/: pyproject.toml
examples/autoformalization/: README.md  evaluate.py  initial.lean  run_evo.py  utils_lean.py
scripts/: README.md  check_pinned_deps.py  install-git-hooks.sh
shinka/: __init__.py  env.py  eval_hydra.py  google_genai.py  launch_hydra.py  model_availability.py
tests/: test_agentic_editor.py  test_agentic_evaluator.py  test_anthropic_accounting.py  test_async_apply.py  test_async_database_drift.py  test_async_novelty_parity.py  test_async_prompt_evolver_parity.py  test_async_runner_fix_recovery.py  test_async_runner_recovery.py  test_async_runner_shutdown.py  test_async_summarizer_parity.py  test_autoformalization_eval.py  test_bandit_persistence.py  test_ci_workflows.py  test_codex_device_auth.py  test_contributing_docs.py  test_core_drift.py  test_credentials.py  test_cvdp_evaluator.py  test_database_no_api_keys.py  test_db_indexes.py  test_dedup_drift_local.py  test_deepseek_accounting.py  test_dotenv_loading.py  test_dynamic_islands.py  test_edit_base.py  test_edit_lean.py  test_edit_wolfram.py  test_embedding_client_backends.py  test_embedding_model_resolver.py  test_eval_result_integrity.py  test_failure_nodes_webui.py  test_gemini_provider.py  test_gemini_retry_policy.py  test_inspiration_nplus1.py  test_island_sampler.py  test_launch_hydra_async.py  test_launch_job_status.py  test_llm_client_backends.py  test_llm_client_cache.py  (+40 more)
website/: README.md  index.html  style.css
webui-react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+314 files in other folders)
