[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-evolve"
version = "0.1.0"
description = "Genesis: LLM-Driven Program Evolution Platform"
authors = [
    {name = "George Pearse", email = "george@genesis.ai"},
    {name = "Sakana AI (Original ShinkaEvolve)", email = "robert@sakana.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "anthropic",
    "requests",
    "boto3",
    "pydantic",
    "backoff",
    "python-dotenv",
    "instructor",
    "python-Levenshtein",
    "radon",
    "unidiff",
    "dill",
    "hydra-core==1.3.2",
    "matplotlib",
    "networkx",
    "seaborn",
    "moviepy",
    "scikit-learn",
    "adjustText",
    "markdown",
    "aiofiles",
]

[tool.setuptools]
packages = ["shinka"]
script-files = ["shinka/genesis_launch", "shinka/genesis_visualize"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
]
